# AirMouse

./: LICENSE  README.md
ClickGestureTrainer/: CMakeLists.txt  Debouncer.h  IndexSampleRecorder.cpp  MiddleSampleRecorder.cpp  MiddleSampleRecorder.h  main.cpp
Controller/: Basic-Config  CMakeLists.txt  ClickDetector.cpp  ClickDetector.h  Debouncer.cpp  LeftClickSampleRecorder.cpp  LeftClickSampleRecorder.h  MouseController.cpp  MouseController.h  RightClickSampleRecorder.cpp  SampleReaderA.cpp  SampleReaderA.h  SampleRecorder.cpp  SampleRecorder.h  StaticSampleRecorder.cpp  StaticSampleRecorder.h  StaticSampleRecorderMoreFeatures.h  main.cpp
MergeTrainingSet/: CMakeLists.txt  main.cpp
StaticGesturesTrainer/: CMakeLists.txt  FeatureExtractor.cpp  FeatureExtractor.h  FrameReader.cpp  FrameReader.h  SampleReaderMoreFeatures.cpp  SampleReaderMoreFeatures.h  StaticSampleReader.cpp  StaticSampleReader.h  main.cpp
UsabilityTest/: index.html
